web/src/style.css
/* ... */
#nav {
  padding: 0;
  position: fixed;
  left: 200px;
  top: 130px;
  transform-origin: 0 0;

  transition: transform .2s ease;

  margin: 0;
  line-height: 36px;
  z-index: 10;

  & a {
    color: var(--color-fg);
    line-height: 20px;
    font-size: 16px;
    display: inline-flex;
    align-items: center;
    margin-right: 10px;

    &:last-child {
      margin-right: 0;
    }

    &::before {
      content: ">";
      font-size: 10px;
      font-family: monospace;
      margin-right: 5px;
    }
  }
}

/* Title */

.title {
  /* transform-style: preserve-3d; */

  width: calc(var(--optical-width) * var(--size) * 1px);
  height: calc(var(--line-cnt) * var(--line-height));

  fill: var(--color-fg);

  & .line {
    transform:
      translateY(calc(var(--line-idx) * var(--line-height) + var(--baseline-y)));
  }

  & .var-group {
    transform-origin: 0 0;
    /*
     * Remember to sync the following declaration to .post-title,
     * .post-metadata-aux .title, and also applyTitleVariation !
     */
    transform: translateX(calc(1px * var(--grp-line-xdiff, var(--grp-xdiff)) * var(--size)));
  }

  & .glyph {
    transform: translateX(calc(1px * var(--in-grp-xdiff) * var(--size) * var(--var-scale)));
  }

  & path {
    transform-origin: 0 0;
    transform: scale(calc(var(--size) * var(--var-scale)));
  }

  pointer-events: none;
  overflow: visible;
}

.surrogate-title {
  font-family: var(--title-font);
  font-weight: 900;
}

.title-center {
  & .line {
    transform:
      translateY(calc(var(--line-idx) * var(--line-height) + var(--baseline-y)))
      translateX(calc((var(--optical-width) - var(--line-optical-width)) * var(--size) * 0.5px));
  }
}

/* List */

/* Shared list-like top-level container */
.list, .search-input-container, .search-result {
  left: 200px;
  right: 0;

  padding-right: 60px;
  @media (max-width: 800px) {
    top: 120px;
    left: 0;
    padding-left: 60px;
  }

  @media (max-width: 500px) {
    padding: 0 40px 0 40px;
  }
}

.list {
  position: absolute;
  top: 0;
  padding-top: 250px;
}

.entry {
  margin-bottom: 60px;
  content-visibility: auto;
  contain-intrinsic-height: 80px;
}

.entry-title {
  --size: 24;
  --baseline-y: 30px;
  --line-height: 40px;
  margin-bottom: 10px;
  position: relative;
  width: min-content;
}

.entry .surrogate-title {
  font-size: 24px;
  width: min(calc(100vw - 120px), 400px);
}

.entry-title-tangible {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: inline-block;
  font-size: calc(var(--size) * 1px);
  line-height: 40px;
  overflow: hidden;
  color: transparent;
  font-family: var(--title-font);
  font-weight: 900;
}

.entry-preview {
  max-width: 600px;
  color: var(--color-fg-secondary);
  font-size: 14px;
  line-height: 24px;
  margin-bottom: 20px;
}

.entry-time {
  font-size: 14px;
  color: var(--color-fg-secondary);
  line-height: 24px;
  display: flex;
  justify-content: flex-start;
  align-items: center;

  & svg {
    height: 16px;
    width: 16px;
    margin-left: 5px;
    fill: var(--color-fg-icon);
  }
}

/* Posts */
.post {
  position: absolute;
  width: 100%;
  top: 0;

  --title-line-height: 60px;
  --title-line-cnt: 1;
  --post-top-gutter: clamp(
    calc(120px + var(--title-line-height) * var(--title-line-cnt)),
    50vh,
    calc(240px + var(--title-line-height) * var(--title-line-cnt))
  );

  @media (max-width: 800px) {
    --post-top-gutter: max(
      calc(160px + var(--title-line-height) * var(--title-line-cnt)),
      calc(240px + 0.5 * var(--title-line-height) * var(--title-line-cnt))
    )
  }
}

.post > .title {
  --size: 48;
  --baseline-y: 48px;
  --line-height: var(--title-line-height);
  position: absolute;
  top: var(--post-top-gutter);
  left: 50%;
  transform: translateX(-50%) translateY(-100%);
  pointer-events: all;

  @media (max-width: 1150px) {
    transform: translateX(90px) translateX(-50%) translateY(-100%);
  }

  @media (max-width: 800px) {
    transform: translateX(-50%) translateY(-100%);
  }

  & .var-group {
    transform:
      translate(
        calc((var(--var-offset-x, 0px) + 1px * var(--grp-line-xdiff, var(--grp-xdiff))) * var(--size)),
        calc(var(--var-offset-y, 0px) * var(--size) + 
          (0px - 1px * var(--scroll, 0) * (var(--var-scale) - 0.5) / 2)
        )
      );

    filter: blur(calc(1px * var(--scroll, 0) * (var(--var-scale) - 0.7) / 10));
    opacity: calc(1 - var(--scroll, 0) * (var(--var-scale) - 0.5) / 200);
  }
}

.post > .surrogate-title {
  font-size: 48px;
  text-align: center;
  position: absolute;
  left: 50%;
  top: var(--post-top-gutter);
  width: min(80%, 100% - 80px);

  transform: translateX(-50%) translateY(-100%);

  @media (max-width: 1150px) {
    transform: translateX(90px) translateX(-50%) translateY(-100%);
  }

  @media (max-width: 800px) {
    transform: translateX(-50%) translateY(-100%);
  }
}

.post-content-wrapper {
  margin-top: calc(var(--post-top-gutter) + 100px);
  padding: 0px 240px 60px 240px;
  position: relative;

  @media (max-width: 1150px) {
    padding: 0px 60px 60px 240px;
  }

  @media (max-width: 800px) {
    padding: 0px 60px 60px 60px;
  }

  @media (max-width: 500px) {
    padding: 0px 40px 60px 40px;
  }
}

.post-content {
  max-width: 600px;
  @media (max-width: 950px) {
    max-width: 450px;
  }
  margin: 0 auto;
  font-size: 16px;
  line-height: 28px;
}

.post-metadata, .post-metadata-aux {
  & .post-metadata-line {
    display: flex;
    align-items: center;
  }

  & svg:not(.title) {
    height: 18px;
    fill: var(--color-fg-icon);
  }

  font-size: 14px;
  line-height: 18px;
}
/* ... */

